--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <main id="main">
     </main>
     <!-- Don't forget to include React dependencies! -->
+    <script src="https://unpkg.com/react@15/dist/react.js"></script>
+<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
     <script src="index.js"></script>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
